# django-evaluation-task

./: README.md  app.py  forms.py  main.py  manage.py  models.py  problem_set_1.py  pyproject.toml  routes.py
api/: __init__.py  serializers.py  urls.py  views.py
appdownloader/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
attached_assets/: Pasted-Django-Evaluation-Final-Deadline-Within-7-days-of-the-date-when-it-was-assigned-Grace-period--1745252403671.txt
core/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
problem_1/: regex_extraction.py
static/css/: custom.css
static/js/: drag_drop.js  main.js
templates/: base.html  dashboard.html  home.html  login.html  signup.html
templates/admin/: app_form.html  app_list.html  dashboard.html
templates/registration/: login.html  signup.html
templates/user/: dashboard.html  profile.html  task_detail.html
