[tool.poetry]
name = "django-evaluation-task"
version = "0.1.0"
description = "Django Evaluation Task"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
gunicorn = "^23.0.0"
flask = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.packages]
include = ["appdownloader", "core"]  # Add your app directories here
